base: button rodeo - 8s to FC
-add navbar enabler for hw button devices
-fix assist for hw button devices (long press home)
-add long press hw menu support for e.g. recents
-global recents style for hw and soft buttons
-restore pin app support for hw button devices but with back this time
-hw button sound on touch was really never working?
-fix and add long press back to kill and long press recents to last app

Change-Id: Ie95090b660bee2f523886e6c9fbf3ee3adb50b08

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -134,6 +134,9 @@
             android:protectionLevel="signature" />
     <uses-permission android:name="com.android.systemui.permission.SELF" />
 
+    <!-- kill app -->
+    <uses-permission android:name="android.permission.FORCE_STOP_PACKAGES" />
+
     <application
         android:name=".SystemUIApplication"
         android:persistent="true"
