[1/2] base: move UI Tuner to dev settings
Change-Id: I8ee20ad3850c902fe18497615055fc58638eabd4

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -208,12 +208,12 @@
                   android:label="@string/system_ui_tuner"
                   android:process=":tuner"
                   android:exported="true">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <meta-data android:name="com.android.settings.category"
-                    android:value="com.android.settings.category.system" />
+                    android:value="com.android.settings.category.system" />-->
         </activity>
 
         <!-- Alternate Recents -->
